# docs/swagger.json
@@ -164,7 +164,7 @@
                 }
             }
         },
-        "/feedback": {
+        "/form": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -173,23 +173,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "feedback"
+                    "form"
                 ],
-                "summary": "Create feedback.",
+                "summary": "Create form.",
                 "parameters": [
                     {
-                        "description": "Feedback",
-                        "name": "Feedback",
+                        "description": "Form",
+                        "name": "Form",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.CreateFeedbackSwagger"
+                            "$ref": "#/definitions/model.CreateFormSwagger"
                         }
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.Response"
                         }
@@ -489,9 +489,6 @@
         },
         "/image-carousel": {
             "get": {
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -499,20 +496,6 @@
                     "image carousel"
                 ],
                 "summary": "Get all images.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "limit",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "offset",
-                        "name": "offset",
-                        "in": "query"
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -522,6 +505,55 @@
                     },
                     "204": {
                         "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "408": {
+                        "description": "Request Timeout",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/model.Response"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "image carousel"
+                ],
+                "summary": "Update images carousel by id.",
+                "parameters": [
+                    {
+                        "description": "ImagesCarousel",
+                        "name": "ImagesCarousel",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.UpdateImageCarouselSwagger"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.Response"
                         }
@@ -597,59 +629,6 @@
             }
         },
         "/image-carousel/{id}": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "image carousel"
-                ],
-                "summary": "Get image by id.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "408": {
-                        "description": "Request Timeout",
-                        "schema": {
-                            "$ref": "#/definitions/model.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/model.Response"
-                        }
-                    }
-                }
-            },
             "delete": {
                 "consumes": [
                     "application/json"
@@ -1710,7 +1689,7 @@
                 }
             }
         },
-        "model.CreateFeedbackSwagger": {
+        "model.CreateFormSwagger": {
             "type": "object",
             "properties": {
                 "email": {
@@ -1756,8 +1735,13 @@
             "type": "object",
             "properties": {
                 "image": {
-                    "type": "string",
-                    "example": ""
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        ""
+                    ]
                 }
             }
         },
@@ -2010,6 +1994,24 @@
                 "title": {
                     "type": "string",
                     "example": "some title"
+                }
+            }
+        },
+        "model.UpdateImageCarouselSwagger": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "example": ""
+                },
+                "image": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        ""
+                    ]
                 }
             }
         },
